tests/paczka1/fuzzy1/79854697.err
Error in line 5: Pw1KAIf4ZzD S217 81,8
Error in line 4: M0KqFpU S602 45,3
Error in line 9: Pw1KAIf4ZzD S553 50,2
Error in line 16: hdGrciTs5 S553 25,4
Error in line 6: S217 S217 59,2
Error in line 24: TiKs3L1w S553 34,7
Error in line 33: S217S39950,6
Error in line 32: M0KqFpU S553 62,1
